Angular Basico secciones 4,5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <!-- <app-contador></app-contador> -->
 <!-- <app-heroes></app-heroes> -->
-<app-listado></app-listado>
+<!-- <app-listado></app-listado>
 <app-heroe></app-heroe>
 <app-contador></app-contador>
+<app-ainur></app-ainur> -->
+<!-- <app-main-page></app-main-page> -->
+
+<app-murakami-main></app-murakami-main>
